<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt_BR">
    <string name="app_name">Eventos</string>
    <string name="events_list_title">Eventos</string>
    <string name="events_list_failed_to_refresh">Falha ao carregar informações</string>
    <string name="events_list_error_title">Oops!</string>
    <string name="events_list_error_subtitle">Algo deu errado com a sua requisição.</string>
    <string name="events_list_error_btn_text">Tentar novamente</string>
    <string name="events_details">Sobre o evento</string>
    <string name="share_event">Compartilhar</string>
    <string name="date_format">Data: %1$s</string>
    <string name="price_format">R$ %1$.2f</string>
    <string name="check_in_event_title">Faça check-in neste evento!</string>
    <string name="btn_do_check_in">Check In</string>
    <string name="check_in_event">Check In</string>
    <string name="events_details_share">Compartilhar</string>
    <string name="events_details_show_map">Mostrar no mapa</string>
    <string name="events_details_failed_to_refresh">Falha ao atualizar informações</string>
    <string name="events_details_failed_to_open_maps_or_browser">Erro ao abrir navegador ou maps :(</string>
    <string name="event_check_in_your_name">Seu nome</string>
    <string name="event_check_in_your_email">Seu email</string>
    <string name="check_in_name_is_required">Insira um nome</string>
    <string name="check_in_name_too_short">Nome muito pequeno</string>
    <string name="check_in_email_is_required">Insira seu email</string>
    <string name="check_in_email_invalid">Email inválido</string>
    <string name="check_in_error_title">Oops!</string>
    <string name="check_in_error_subtitle">Não conseguimos fazer check-in neste momento.</string>
    <string name="check_in_error_btn_text">Tentar novamente</string>
    <string name="check_in_completed_title">Você fez check-in no evento! Que demais!</string>
    <string name="share_event_content_title">Os detalhes do evento foram copiados para a Área de Transferência</string>
    <string name="share_event_btn_action">Que demais!</string>
    <string name="event_shared">Evento compartilhado!</string>
</resources>