<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="dev.forcetower.events.R" />
        <variable
            name="actions"
            type="dev.forcetower.events.presentation.details.DetailsViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:paddingStartSystemWindowInsets="@{true}"
            app:paddingEndSystemWindowInsets="@{true}"
            app:paddingTopSystemWindowInsets="@{true}">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/events_details"
                app:titleCentered="true"
                app:navigationIcon="?android:attr/homeAsUpIndicator"
                app:menu="@menu/event_details_options"
                app:onMenuItemClickListener="@{(item) -> actions.onMenuItemClicked(item.itemId, actions.event)}"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="96dp"
                app:paddingStartSystemWindowInsets="@{true}"
                app:paddingEndSystemWindowInsets="@{true}"
                app:paddingBottomSystemWindowInsets="@{true}">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{actions.event.image}"
                    app:fallbackResource="@{R.mipmap.error_image}"
                    tools:src="@tools:sample/backgrounds/scenic"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@{actions.event.title}"
                    android:textSize="20sp"
                    android:textColor="?attr/colorPrimary"
                    tools:text="@sample/events.json/data/title"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_details_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    app:eventDate="@{actions.event.date}"
                    tools:text="Sat, 23 de jan de 2030, 14:11"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@{@string/price_format(actions.event.price)}"
                    tools:text="R$ 16,99"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@{actions.event.description}"
                    tools:text="@sample/events.json/data/description"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> actions.checkInEvent(actions.event)}"
            android:layout_gravity="bottom|end"
            android:text="@string/btn_do_check_in"
            app:icon="@drawable/ic_check_in_black_24dp"
            app:marginEndSystemWindowInsets="@{true}"
            app:marginBottomSystemWindowInsets="@{true}"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>