<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_map"
        android:title="@string/events_details_show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_map_24"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:id="@+id/item_share"
        android:title="@string/events_details_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_share_24"
        app:iconTint="?attr/colorControlNormal"/>
</menu>